feat: :sparkles: Item and Cash transfers now create a history card in the chat

--- a/lang/en.json
+++ b/lang/en.json
@@ -467,7 +467,7 @@
   "SDM.FieldName": "Name",
   "SDM.FieldOther": "Other",
   "SDM.FieldPhysicalDefense": "Physical Defense",
-  "SDM.FieldPlayerXP": "Player xp",
+  "SDM.FieldPlayerXP": "Player XP",
   "SDM.FieldPlayerXPTitle": "Player Experience",
   "SDM.FieldQuirk": "Quirk",
   "SDM.FieldRevenue": "Revenue",
