feat: :sparkles: Add support to all VLG traits

--- a/lang/en.json
+++ b/lang/en.json
@@ -263,8 +263,8 @@
   "SDM.Before": "Before",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.BlindRoll": "Blind GM",
-  "SDM.BloodDice": "blood dice",
-  "SDM.BloodDie": "blood die",
+  "SDM.BloodDice": "blood die",
+  "SDM.BloodDicePl": "blood dice",
   "SDM.BonusHeroDice": "Bonus Hero Dice",
   "SDM.BonusHeroDicePool": "Bonus Hero Dice pool",
   "SDM.brick-bastions": "Brick Bastions",
@@ -346,6 +346,7 @@
   "SDM.DistributeXP": "Distribute XP",
   "SDM.DOCUMENT.Create": "Create {type}",
   "SDM.DOCUMENT.New": "New {type}",
+  "SDM.DoubleClickToEdit": "Double-click to Edit",
   "SDM.DSNChromatypeSame": "Same as the Chromatype",
   "SDM.Effect.ChangeProperty": "Property",
   "SDM.Effect.Inactive": "Inactive",
@@ -356,24 +357,35 @@
   "SDM.EffectInactive": "Inactive Effects",
   "SDM.EffectPassive": "Passive Effects",
   "SDM.EffectsLabel.system.abilities.agi.bonus": "Agility Bonus",
+  "SDM.EffectsLabel.system.abilities.agi.roll_bonus": "Bonus to Agility related rolls",
   "SDM.EffectsLabel.system.abilities.agi.save_bonus": "Bonus to Agility Saving Throw",
   "SDM.EffectsLabel.system.abilities.aur.bonus": "Aura Bonus",
+  "SDM.EffectsLabel.system.abilities.aur.roll_bonus": "Bonus to Aura related rolls",
   "SDM.EffectsLabel.system.abilities.aur.save_bonus": "Bonus to Aura Saving Throw",
   "SDM.EffectsLabel.system.abilities.cha.bonus": "Charisma Bonus",
+  "SDM.EffectsLabel.system.abilities.cha.roll_bonus": "Bonus to Charisma related rolls",
   "SDM.EffectsLabel.system.abilities.cha.save_bonus": "Bonus to Charisma Saving Throw",
   "SDM.EffectsLabel.system.abilities.end.bonus": "Endurance Bonus",
+  "SDM.EffectsLabel.system.abilities.end.roll_bonus": "Bonus to Endurance related rolls",
   "SDM.EffectsLabel.system.abilities.end.save_bonus": "Bonus to Endurance Saving Throw",
   "SDM.EffectsLabel.system.abilities.str.bonus": "Strength Bonus",
+  "SDM.EffectsLabel.system.abilities.str.roll_bonus": "Bonus to Strength related rolls",
   "SDM.EffectsLabel.system.abilities.str.save_bonus": "Bonus to Strength Saving Throw",
   "SDM.EffectsLabel.system.abilities.tho.bonus": "Thought Bonus",
+  "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bonus to Thought related rolls",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bonus to Thought Saving Throw",
   "SDM.EffectsLabel.system.all_save_bonus": "Bonus to all saving throw rolls",
   "SDM.EffectsLabel.system.armor_bonus": "Armor Bonus",
   "SDM.EffectsLabel.system.attack_bonus": "All attack bonus",
   "SDM.EffectsLabel.system.base_damage_multiplier": "Starting damage multiplier value for critical hits",
+  "SDM.EffectsLabel.system.blood_dice.bonus": "Extra blood dice (increases the max number of blood dice)",
+  "SDM.EffectsLabel.system.blood_dice.dice_type": "Blood dice type, override with: (d4, d6, d8, d10, d12 or d20)",
+  "SDM.EffectsLabel.system.blood_dice.enabled": "Enables access to blood dice, boolean property. Use change mode Override",
+  "SDM.EffectsLabel.system.borrowed_life.enabled": "Enables access to borrowed life, boolean property. Use change mode Override",
   "SDM.EffectsLabel.system.burden_penalty_bonus": "Burden Pernalty (negative values to remove penalty)",
   "SDM.EffectsLabel.system.burden_slots_bonus": "Affects the number of burden slots",
   "SDM.EffectsLabel.system.capacity": "Caravan carry capacity in sacks",
+  "SDM.EffectsLabel.system.damage_bonus": "Bonus damage added to all weapon, power and album of power damage rolls",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
   "SDM.EffectsLabel.system.fantascience.bonus": "Fantascience attack bonus",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Extra hero dice (increases the max number of hero dice)",
@@ -386,13 +398,22 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "Oldtech attack bonus",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Number of packade items (not readied items) that won't take item slots",
   "SDM.EffectsLabel.system.power_cost": "Power Cost",
+  "SDM.EffectsLabel.system.power_cost_bonus": "Bonus value (positive number) deducted from all powers total cost",
   "SDM.EffectsLabel.system.power_slots_bonus": "Number of powers that won't take either item or trait slots",
   "SDM.EffectsLabel.system.prestige": "Prestige bonus (social defense)",
   "SDM.EffectsLabel.system.ranged.bonus": "Ranged attack bonus",
   "SDM.EffectsLabel.system.reaction_bonus": "Reaction Bonus",
+  "SDM.EffectsLabel.system.readied_armor_take_no_slots": "Readied armor take no item slots. Boolean property, use change mode Override",
+  "SDM.EffectsLabel.system.readied_item_slots_bonus": "Number of readied items that won't take item slots",
   "SDM.EffectsLabel.system.small_item_slots_bonus": "Number small sized (sp) items that won't take items slots",
   "SDM.EffectsLabel.system.social_defense_bonus": "Social defense bonus",
   "SDM.EffectsLabel.system.speed": "Caravan speed value (integer number ranging from -3 to 2)",
+  "SDM.EffectsLabel.system.temporary_life.enabled": "Enables access to temporary life, boolean property. Use change mode Override",
+  "SDM.EffectsLabel.system.temporary_life.max": "Determines the maximum value of your temporary life",
+  "SDM.EffectsLabel.system.tourist_dice.bonus": "Extra tourist dice (increases the max number of tourist dice)",
+  "SDM.EffectsLabel.system.tourist_dice.dice_type": "Tourist dice type, override with: (d4, d6, d8, d10, d12 or d20)",
+  "SDM.EffectsLabel.system.tourist_dice.enabled": "Enables access to tourist dice, boolean property. Use change mode Override",
+  "SDM.EffectsLabel.system.tourist_dice.max": "Determines the maximum number of tourist dice (set to your current charisma)",
   "SDM.EffectsLabel.system.trait_slots_bonus": "Affects the number of trait slots",
   "SDM.EffectsLabel.system.ward_bonus": "Ward bonus (affects mental defense and all saving throw rolls)",
   "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Number weapon items that won't take items slots",
@@ -437,6 +458,7 @@
   "SDM.EscalatorDieHint": "Current bonus: +{value}",
   "SDM.EscalatorDieIncreased": "Escalator Die increased to {value}",
   "SDM.EscalatorDieReset": "Escalator Die reset to 0",
+  "SDM.Event": "Event",
   "SDM.ExperienceDistribution": "XP Distribution",
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
   "SDM.ExplodingDice": "Exploding Dice",
@@ -499,6 +521,7 @@
   "SDM.FieldSpeed": "Speed",
   "SDM.FieldSupply": "Supply",
   "SDM.FieldSupplyPerWeek": "Supply / Week",
+  "SDM.FieldTouristDice": "Tourist Dice",
   "SDM.FieldTransportType": "Type",
   "SDM.FieldWealth": "Wealth",
   "SDM.FieldWeeklyCost": "Total Cost (€) / Wk",
@@ -519,14 +542,14 @@
   "SDM.HallmarkItem": "Hallmark",
   "SDM.Healing": "Healing",
   "SDM.HealingHouseRule": "Healing House Rule",
-  "SDM.HeroDice": "hero dice",
+  "SDM.HeroDice": "hero die",
   "SDM.HeroDiceHealingTip": "<b>Left-click</b>: roll Hero Dice for healing<br><b>Right-click</b>: add Hero Dice to a shared Bonus Pool",
   "SDM.HeroDiceMode": "Hero Dice Mode",
   "SDM.HeroDiceModeDecrease": "Decrease (suppress roll result)",
   "SDM.HeroDiceModeHint": "Choose whether hero dice should raise or lower a roll result. Decrease will floor dice at 1 and never generate extra exploding dice.",
   "SDM.HeroDiceModeIncrease": "Increase (boost roll result)",
+  "SDM.HeroDicePl": "hero dice",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
-  "SDM.HeroDie": "hero die",
   "SDM.humans-of-the-pananthropy": " Humans of the Pananthropy",
   "SDM.HumanSupplies": "Human Supplies",
   "SDM.Increment": "Increase by 1",
@@ -576,6 +599,7 @@
   "SDM.ItemToggleReadied": "Toggle Readied Status",
   "SDM.ItemTraitType": "Trait Type",
   "SDM.ItemWard": "Ward",
+  "SDM.LifeBefore": "Life Before",
   "SDM.MachineSupplies": "Machine Supplies",
   "SDM.Magitech": "Magitech",
   "SDM.ManageHeroDice": "Adjust Hero Dice",
@@ -719,6 +743,7 @@
   "SDM.RollNormal": "normal",
   "SDM.RollTitle": "{prefix}Roll: {title}",
   "SDM.RollType": "{type} Roll",
+  "SDM.RollUse": "Use {type}",
   "SDM.RollUseBloodDice": "Use Blood Dice",
   "SDM.RollUseHeroDice": "Use Hero Dice",
   "SDM.Route": "route",
@@ -732,6 +757,7 @@
   "SDM.SavingThrowSaveMessage": "Disaster averted, fortune appeased.",
   "SDM.SelectCharacter": "Select Character",
   "SDM.SelectResource": "Select Resource",
+  "SDM.SetBonusHeroDice": "Set Bonus Hero Dice Pool",
   "SDM.Settings.ResetDefaults.Confirm": " Reset all fields in this section to their default values?",
   "SDM.Settings.ResetDefaults.Title": "Reset Settings",
   "SDM.SettingsBaseBurdenSlots": "Base Burden Slots",
@@ -850,10 +876,13 @@
   "SDM.TabTransport": "Beasts & Vehicles",
   "SDM.Target": "Target",
   "SDM.Temporary": "Temporary",
+  "SDM.TemporaryBefore": "Temporary Life Before",
   "SDM.Total": "total",
   "SDM.TotalCharged": "Total Charged",
   "SDM.TotalSuppliesConsumed": "Total supplies consumed",
   "SDM.TotalToCharge": "Total to Charge",
+  "SDM.TouristDice": "tourist die",
+  "SDM.TouristDicePl": "tourist dice",
   "SDM.Transfer": "{type} Transfer",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferComplete": "Transfer completed successfully",
@@ -915,8 +944,5 @@
   "TYPES.Item.trait": "Trait",
   "TYPES.Item.vehicle": "Vehicle",
   "TYPES.Item.ward": "Ward",
-  "TYPES.Item.weapon": "Weapon",
-  "SDM.TemporaryBefore": "Temporary Life Before",
-  "SDM.LifeBefore": "Life Before",
-  "SDM.Event": "Event"
+  "TYPES.Item.weapon": "Weapon"
 }
