--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -263,8 +263,8 @@
   "SDM.Before": "Antes",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.BlindRoll": "Cega pro Mestre",
-  "SDM.BloodDice": "dados de sangue",
-  "SDM.BloodDie": "dado de sangue",
+  "SDM.BloodDice": "dado de sangue",
+  "SDM.BloodDicePl": "dados de sangue",
   "SDM.BonusHeroDice": "Dados Heróicos Bônus",
   "SDM.BonusHeroDicePool": "Parada Bônus de Dados Heróicos",
   "SDM.brick-bastions": "Bastiões de Tijolo",
@@ -346,6 +346,7 @@
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.DOCUMENT.Create": "Criar {type}",
   "SDM.DOCUMENT.New": "Novo {type}",
+  "SDM.DoubleClickToEdit": "Dois cliques para Editar",
   "SDM.DSNChromatypeSame": "Mesma do Cromatipo",
   "SDM.Effect.ChangeProperty": "Propriedade",
   "SDM.Effect.Inactive": "Inativo",
@@ -356,24 +357,35 @@
   "SDM.EffectInactive": "Efeitos Inativos",
   "SDM.EffectPassive": "Efeitos Passivos",
   "SDM.EffectsLabel.system.abilities.agi.bonus": "Bônus de Rapidez",
+  "SDM.EffectsLabel.system.abilities.agi.roll_bonus": "Bônus para testes relacionados à Rapidez",
   "SDM.EffectsLabel.system.abilities.agi.save_bonus": "Bônus para Salvaguarda de Rapidez",
   "SDM.EffectsLabel.system.abilities.aur.bonus": "Bônus de Aura",
+  "SDM.EffectsLabel.system.abilities.aur.roll_bonus": "Bônus para testes relacionados à Aura",
   "SDM.EffectsLabel.system.abilities.aur.save_bonus": "Bônus para Salvaguarda de Aura",
   "SDM.EffectsLabel.system.abilities.cha.bonus": "Bônus de Carisma",
+  "SDM.EffectsLabel.system.abilities.cha.roll_bonus": "Bônus em testes relacionados ao Carisma",
   "SDM.EffectsLabel.system.abilities.cha.save_bonus": "Bônus para Salvaguarda de Carisma",
   "SDM.EffectsLabel.system.abilities.end.bonus": "Bônus de Resistência",
+  "SDM.EffectsLabel.system.abilities.end.roll_bonus": "Bônus para testes relacionados à Resistência",
   "SDM.EffectsLabel.system.abilities.end.save_bonus": "Bônus para Salvaguarda de Resistência",
   "SDM.EffectsLabel.system.abilities.str.bonus": "Bônus de Força",
+  "SDM.EffectsLabel.system.abilities.str.roll_bonus": "Bônus em testes relacionados à Força",
   "SDM.EffectsLabel.system.abilities.str.save_bonus": "Bônus para Salvaguarda de Força",
   "SDM.EffectsLabel.system.abilities.tho.bonus": "Bônus de Inteligência",
+  "SDM.EffectsLabel.system.abilities.tho.roll_bonus": "Bônus em testes relacionados a Inteligência",
   "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bônus para Salvaguarda de Inteligência",
   "SDM.EffectsLabel.system.all_save_bonus": "Bônus para todas as rolagens de salvaguarda",
   "SDM.EffectsLabel.system.armor_bonus": "Bônus de armadura",
   "SDM.EffectsLabel.system.attack_bonus": "Bônus para todos os ataques",
   "SDM.EffectsLabel.system.base_damage_multiplier": "Valor inicial do multiplicador de dado para acertos críticos",
+  "SDM.EffectsLabel.system.blood_dice.bonus": "Dados de sangue extras (aumenta o número máximo de dados de sangue)",
+  "SDM.EffectsLabel.system.blood_dice.dice_type": "Tipo de dado de sangue, substituir por: (d4, d6, d8, d10, d12 ou d20)",
+  "SDM.EffectsLabel.system.blood_dice.enabled": "Permite acesso a dados de sangue, propriedade booleana. Use 'Mudar o Modo' Sobrepor",
+  "SDM.EffectsLabel.system.borrowed_life.enabled": "Permite acesso à vida emprestada, propriedade booleana. Use 'Mudar o Modo' Sobrepor",
   "SDM.EffectsLabel.system.burden_penalty_bonus": "Penalidade por Fardos (números negativos para ignorar fardos)",
   "SDM.EffectsLabel.system.burden_slots_bonus": "Afeta o número de espaços para fardos",
   "SDM.EffectsLabel.system.capacity": "Capacidade da Caravana em sacas",
+  "SDM.EffectsLabel.system.damage_bonus": "Dano bônus adicionado a todas as jogadas de dano de arma, poder e álbum de poder",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.fantascience.bonus": "Bônus de ataque com fantasciência",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Dados heróicos extras (aumenta o número máximo de dados heróicos)",
@@ -386,13 +398,22 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "Bônus de ataque com velhatec",
   "SDM.EffectsLabel.system.packed_item_slots_bonus": "Número de itens empacotados (não equipados) que não ocupam espaços",
   "SDM.EffectsLabel.system.power_cost": "Custo de poderes",
+  "SDM.EffectsLabel.system.power_cost_bonus": "Valor do bônus (número positivo) deduzido do custo total de todos os poderes",
   "SDM.EffectsLabel.system.power_slots_bonus": "Número de poderes que não ocupam espaços de itens ou traços",
   "SDM.EffectsLabel.system.prestige": "Bônus de prestígio (defesa social)",
   "SDM.EffectsLabel.system.ranged.bonus": "Bônus de ataque à distância",
   "SDM.EffectsLabel.system.reaction_bonus": "Bônus de reação",
+  "SDM.EffectsLabel.system.readied_armor_take_no_slots": "Armaduras equipadas não ocupam slots de itens. Propriedade booleana, use 'Mudar o Modo' Sobrepor",
+  "SDM.EffectsLabel.system.readied_item_slots_bonus": "Número de itens equipados que não ocupam espaços de inventário",
   "SDM.EffectsLabel.system.small_item_slots_bonus": "Número de itens pequenos (ct) que não ocupam espaços",
   "SDM.EffectsLabel.system.social_defense_bonus": "Bônus de defesa social",
   "SDM.EffectsLabel.system.speed": "Velocidade da Caravana (número inteiro de -3 até 2)",
+  "SDM.EffectsLabel.system.temporary_life.enabled": "Habilita acesso à vida temporária, propriedade booleana. Use 'Mudar o Modo' Sobrepor",
+  "SDM.EffectsLabel.system.temporary_life.max": "Determina o valor máximo da sua vida temporária",
+  "SDM.EffectsLabel.system.tourist_dice.bonus": "Dados turísticos extras (aumenta o número máximo de dados turísticos)",
+  "SDM.EffectsLabel.system.tourist_dice.dice_type": "Tipo de dado turístico, sobrepor por: (d4, d6, d8, d10, d12 ou d20)",
+  "SDM.EffectsLabel.system.tourist_dice.enabled": "Permite acesso a dados turísticos, propriedade booleana. Use 'Mudar o Modo' Sobrepor",
+  "SDM.EffectsLabel.system.tourist_dice.max": "Determina o número máximo de dados turísticos (defina de acordo com seu carisma atual)",
   "SDM.EffectsLabel.system.trait_slots_bonus": "Afeta o número de espaços para traços",
   "SDM.EffectsLabel.system.ward_bonus": "Bônus de proteção (afeta defesa mental e todas as rolagens de salvaguarda)",
   "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Número de armas que não ocupam espaços",
@@ -437,6 +458,7 @@
   "SDM.EscalatorDieHint": "Bônus atual: +{value}",
   "SDM.EscalatorDieIncreased": "Dado de Intensidade aumentado para {value}",
   "SDM.EscalatorDieReset": "Dado de Intensidade reiniciado para 0",
+  "SDM.Event": "Evento",
   "SDM.ExperienceDistribution": "Distribuição de EXP",
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
   "SDM.ExplodingDice": "Dados Explosivos",
@@ -499,6 +521,7 @@
   "SDM.FieldSpeed": "Velocidade",
   "SDM.FieldSupply": "Suprimento",
   "SDM.FieldSupplyPerWeek": "Suprimento / Semana",
+  "SDM.FieldTouristDice": "Dados Turísticos",
   "SDM.FieldTransportType": "Tipo",
   "SDM.FieldWealth": "Riqueza",
   "SDM.FieldWeeklyCost": "Custo (€) / Semana",
@@ -519,14 +542,14 @@
   "SDM.HallmarkItem": "Emblemático",
   "SDM.Healing": "Cura",
   "SDM.HealingHouseRule": "Regra da Casa de Cura",
-  "SDM.HeroDice": "dados heróicos",
+  "SDM.HeroDice": "dado heróico",
   "SDM.HeroDiceHealingTip": "<b>clique-esquerdo</b>: role dados heróicos para se curar<br><b>clique-direito</b>: adiciona dados heróicos em uma parada bônus compartilhada",
   "SDM.HeroDiceMode": "Modo dos Dados Heróicos",
   "SDM.HeroDiceModeDecrease": "Diminuir (reduz resultado da rolagem)",
   "SDM.HeroDiceModeHint": "Escolha se os Dados Heróicos devem aumentar ou diminuir a rolagem que irá modificar. Diminuir fixa o valor mínimo de um dado em 1 e nunca gera novas explosões.",
   "SDM.HeroDiceModeIncrease": "Aumentar (incrementa o resultado da rolagem)",
+  "SDM.HeroDicePl": "dados heróicos",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
-  "SDM.HeroDie": "dado heróico",
   "SDM.humans-of-the-pananthropy": "Humanos da Panantrópia",
   "SDM.HumanSupplies": "Suprimentos para Humanos",
   "SDM.Increment": "Aumentar em 1",
@@ -576,6 +599,7 @@
   "SDM.ItemToggleReadied": "Muda Estado Equipado",
   "SDM.ItemTraitType": "Tipo de Traço",
   "SDM.ItemWard": "Resguardo",
+  "SDM.LifeBefore": "Vida Antes",
   "SDM.MachineSupplies": "Suprimentos para Máquinas",
   "SDM.Magitech": "Tecnomagia",
   "SDM.ManageHeroDice": "Ajustar Dados Heróicos",
@@ -719,6 +743,7 @@
   "SDM.RollNormal": "normal",
   "SDM.RollTitle": "Rolagem {prefix}: {title}",
   "SDM.RollType": "Rolagem de {type}",
+  "SDM.RollUse": "Usar",
   "SDM.RollUseBloodDice": "Usar Dados de Sangue",
   "SDM.RollUseHeroDice": "Usar Dados Heróicos",
   "SDM.Route": "rota",
@@ -732,6 +757,7 @@
   "SDM.SavingThrowSaveMessage": "Desastre evitado, fortuna apaziguada.",
   "SDM.SelectCharacter": "Selecionar Personagem",
   "SDM.SelectResource": "Selecione o Recurso",
+  "SDM.SetBonusHeroDice": "Modificar parada Bônus de Dados Heróicos",
   "SDM.Settings.ResetDefaults.Confirm": "Redefinir todos os campos deste seção para seus valores padrão?",
   "SDM.Settings.ResetDefaults.Title": "Redefinir Configurações",
   "SDM.SettingsBaseBurdenSlots": "Espaços de Fardos Base",
@@ -850,10 +876,13 @@
   "SDM.TabTransport": "Montarias & Motores",
   "SDM.Target": "Alvo",
   "SDM.Temporary": "Temporária",
+  "SDM.TemporaryBefore": "Vida Temporária Antes",
   "SDM.Total": "total",
   "SDM.TotalCharged": "Total Cobrado",
   "SDM.TotalSuppliesConsumed": "Total de suprimentos consumidos",
   "SDM.TotalToCharge": "Total Cobrado",
+  "SDM.TouristDice": "dado turístico",
+  "SDM.TouristDicePl": "dados turísticos",
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferComplete": "Transferência realizada com sucesso",
@@ -915,8 +944,5 @@
   "TYPES.Item.trait": "Traço",
   "TYPES.Item.vehicle": "Veículo",
   "TYPES.Item.ward": "Resguardo",
-  "TYPES.Item.weapon": "Arma",
-  "SDM.TemporaryBefore": "Vida Temporária Antes",
-  "SDM.LifeBefore": "Vida Antes",
-  "SDM.Event": "Evento"
+  "TYPES.Item.weapon": "Arma"
 }
