fix: :bug: Fix broken rollable table references to compendium items

--- a/lang/en.json
+++ b/lang/en.json
@@ -601,6 +601,7 @@
   "SDM.ItemTraitType": "Trait Type",
   "SDM.ItemWard": "Ward",
   "SDM.LifeBefore": "Life Before",
+  "SDM.LuckySeven": "Lucky Seven, get some benefit!",
   "SDM.MachineSupplies": "Machine Supplies",
   "SDM.Magitech": "Magitech",
   "SDM.ManageHeroDice": "Adjust Hero Dice",
@@ -806,6 +807,8 @@
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
   "SDM.SettingsLevelUpSoundFx": "Level Up Sounds Effect",
   "SDM.SettingsLevelUpSoundFxHint": "Changes the sound effect played on character level up",
+  "SDM.SettingsLuckySevenRule": "Enable Lucky Seven",
+  "SDM.SettingsLuckySevenRuleHint": "The referee provides a benefit or bonus, when a natural 7 is rolled. Even if the roll is otherwise a failure.",
   "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
   "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
   "SDM.SettingsRerollInitiativeEveryRound": "Reroll Group Initiatives Every Round",
