--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -601,6 +601,7 @@
   "SDM.ItemTraitType": "Tipo de Traço",
   "SDM.ItemWard": "Égide",
   "SDM.LifeBefore": "Vida Antes",
+  "SDM.LuckySeven": "Sete da Sorte, ganhe um bônus!",
   "SDM.MachineSupplies": "Suprimentos para Máquinas",
   "SDM.Magitech": "Tecnomagia",
   "SDM.ManageHeroDice": "Ajustar Dados Heróicos",
@@ -806,6 +807,8 @@
   "SDM.SettingsInvalidChange": "{settings} inválido(a), revertendo para padrão",
   "SDM.SettingsLevelUpSoundFx": "Efeito sonoro ao subir de nível",
   "SDM.SettingsLevelUpSoundFxHint": "Muda o efeito sonoro reproduzido ao subir de nível",
+  "SDM.SettingsLuckySevenRule": "Ativar Sete da Sorte",
+  "SDM.SettingsLuckySevenRuleHint": "O mediador fornece um benefício ou bônus quando um 7 natural é rolado. Mesmo que a rolagem seja uma falha.",
   "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
   "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de Initiativa para NPCs",
   "SDM.SettingsRerollInitiativeEveryRound": "Rerrolar Iniciativas dos Grupos a Cada Rodada",
