--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -46,10 +46,10 @@
   "SDM.AttackTarget": "Tipo de Ataque",
   "SDM.Available": "Disponível",
   "SDM.BackgroundCancel": "Cancelar",
-  "SDM.BackgroundConfirm": "Criar Antecedente",
+  "SDM.BackgroundConfirm": "Criar Traço de Antecedente",
   "SDM.BackgroundEditablePreview": "Prévia Editável do Antecedente",
   "SDM.BackgroundFlavor": "Tema",
-  "SDM.BackgroundGenerator": "Gerador de Antecedentes",
+  "SDM.BackgroundGenerator": "Gerador de Traço de Antecedente",
   "SDM.BackgroundInvalidCharacter": "Nenhum personagem válido foi configurado ou selecionado!",
   "SDM.BackgroundReroll": "Rerrolar Tabela de Antecedentes",
   "SDM.BackgroundRerollConfirmation": "Rerrolar opções de Antecedentes?",
