feat: :sparkles: Add new time-related fields to the caravan sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -465,6 +465,7 @@
   "SDM.ExplodingDice": "Exploding Dice",
   "SDM.ExtractPower": "Extract Power",
   "SDM.ExtractPowerTooltip": "Copy this power to a new power gear in the items sidebar",
+  "SDM.ExtraDaysTallied": "extra days tallied",
   "SDM.Failure": "Failure",
   "SDM.FavoriteSkill": "Favorite Skill",
   "SDM.FeatureVersatile": "versatile",
@@ -633,6 +634,19 @@
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageNoChanges": "No changes were needed",
   "SDM.MessageRolling": "Rolling",
+  "SDM.Month.1": "1 Newfirst - futile, arctic",
+  "SDM.Month.10": "10 Violetmonth - hard, wet",
+  "SDM.Month.11": "11 Snowbringer - grueling, freezing",
+  "SDM.Month.12": "12 Deadwinter - futile, glacial",
+  "SDM.Month.2": "2 Lastmonth - futile, gelid",
+  "SDM.Month.3": "3 Firstmonth - futile, cold, mud",
+  "SDM.Month.4": "4 Greenmonth - hard, cold, wet",
+  "SDM.Month.5": "5 Redmonth - easy",
+  "SDM.Month.6": "6 Orangemonth - easy",
+  "SDM.Month.7": "7 Yellowmonth - easy, hot",
+  "SDM.Month.8": "8 Oldsecond - easy, very hot",
+  "SDM.Month.9": "9 Unity - easy",
+  "SDM.MonthTrucking": "month - trucking",
   "SDM.Morale": "Morale",
   "SDM.MoraleEqualOutcome": "Equal Morale",
   "SDM.MoraleEqualOutcomeMessage": "The NPC redoubles their effort, hoping a last push brings victory. They gain a bonus on their next action.",
@@ -927,6 +941,7 @@
   "SDM.WeaponRange": "Range",
   "SDM.WeaponVersatile": "Versatile",
   "SDM.WeaponVersatileDamage": "Versatile Damage",
+  "SDM.Weeks": "weeks",
   "SDM.Wiki": "Wiki",
   "SDM.WithoutRollingDice": "to increase Bonus Hero Dice Pool",
   "SDM.XPToGive": "XP to Give",
