--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -465,6 +465,7 @@
   "SDM.ExplodingDice": "Dados Explosivos",
   "SDM.ExtractPower": "Extrair Power",
   "SDM.ExtractPowerTooltip": "Copia este poder para um novo equipamento de poder na aba de itens",
+  "SDM.ExtraDaysTallied": "dias extras percorridos",
   "SDM.Failure": "Falha",
   "SDM.FavoriteSkill": "Perícia Favorita",
   "SDM.FeatureVersatile": "versátil",
@@ -633,6 +634,19 @@
   "SDM.MessageDamage": "Causa {damage} de dano!",
   "SDM.MessageNoChanges": "Nenhuma alteração necessária",
   "SDM.MessageRolling": "Rolando",
+  "SDM.Month.1": "1 Primus - praticamente impossível, ártico",
+  "SDM.Month.10": "10 Roxomês - desafiador, úmido",
+  "SDM.Month.11": "11 Trazneve - exaustivo, gélido",
+  "SDM.Month.12": "12 Invermorto - praticamente impossível, glacial",
+  "SDM.Month.2": "2 Últimês - praticamente impossível, gélido",
+  "SDM.Month.3": "3 Primês - praticamente impossível, frio, lama",
+  "SDM.Month.4": "4 Verdemês - desafiador, frio, úmido",
+  "SDM.Month.5": "5 Vermelhomês - fácil",
+  "SDM.Month.6": "6 Laranjamês - fácil",
+  "SDM.Month.7": "7 Amarelomês - fácil, quente",
+  "SDM.Month.8": "8 Segundovelho - fácil, muito quente",
+  "SDM.Month.9": "9 União - fácil",
+  "SDM.MonthTrucking": "mês - condições de estrada",
   "SDM.Morale": "Moral",
   "SDM.MoraleEqualOutcome": "Igual ao Moral",
   "SDM.MoraleEqualOutcomeMessage": "O NPC redobra os esforços, apostando que um último impulso trará a vitória. Recebe um bônus em sua próxima ação.",
@@ -927,6 +941,7 @@
   "SDM.WeaponRange": "Alcance",
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
+  "SDM.Weeks": "semanas",
   "SDM.Wiki": "Wiki",
   "SDM.WithoutRollingDice": "para aumentar a parada bônus de Dados Heróicos",
   "SDM.XPToGive": "EXP para Distribuir",
